test/cases/compile_errors/stage1/obj/invalid_continue_expression.zig
export fn f() void {
    continue;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:2:5: error: continue expression outside loop
